--- a/public/user.view.html
+++ b/public/user.view.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@<%~it.username%> - Phystrainer</title>
+    <title>@{{user.username}} - Phystrainer</title>
+    <link rel="stylesheet" href="/user.css">
     <script>
         // This line ensures that the username always corresponds to the URL. 
         // DO NOT MODIFY
-        const user = "{{user}}"
+        const userID = "{{user.userID}}"
     </script>
 </head>
 <body>
     <header>
+        <img src="{{user.photoURL}}" alt="{{user.username}}" srcset="">
         <h1 id="user-fullName">{{user.fullName}}</h1>
         <h3 id="user-username">{{user.username}}</h3>
         <p id="user-biography">{{user.biography}}</p>
